@@ -127,6 +127,7 @@ AC_HEADER_STDC
 
 AC_CHECK_HEADERS( \
 	alloca.h \
+	aio.h \
 	arpa/inet.h \
 	arpa/nameser.h \
 	bstring.h \
