@@ -106,19 +106,6 @@
 #include "squid.h"
 
 #define DISK_LINE_LEN  1024
-#define MAX_FILE_NAME_LEN 256
-
-typedef struct _dread_ctrl {
-    int fd;
-    off_t offset;
-    int req_len;
-    char *buf;
-    int cur_len;
-    int end_of_file;
-    int (*handler) _PARAMS((int fd, char *buf, int size, int errflag, void *data,
-	    int offset));
-    void *client_data;
-} dread_ctrl;
 
 typedef struct _dwalk_ctrl {
     int fd;
@@ -130,40 +117,6 @@ typedef struct _dwalk_ctrl {
     int (*line_handler) _PARAMS((int fd, char *buf, int size, void *line_data));
     void *line_data;
 } dwalk_ctrl;
-
-typedef struct _dwrite_q {
-    char *buf;
-    int len;
-    int cur_offset;
-    struct _dwrite_q *next;
-} dwrite_q;
-
-typedef struct _FileEntry {
-    char filename[MAX_FILE_NAME_LEN];
-    enum {
-	NO, YES
-    } at_eof;
-    enum {
-	NOT_OPEN, OPEN
-    } open_stat;
-    enum {
-	NOT_REQUEST, REQUEST
-    } close_request;
-    enum {
-	NOT_PRESENT, PRESENT
-    } write_daemon;
-    enum {
-	UNLOCK, LOCK
-    } write_lock;
-    int access_code;		/* use to verify write lock */
-    enum {
-	NO_WRT_PENDING, WRT_PENDING
-    } write_pending;
-    void (*wrt_handle) ();
-    void *wrt_handle_data;
-    dwrite_q *write_q;
-    dwrite_q *write_q_tail;
-} FileEntry;
 
 /* table for FILE variable, write lock and queue. Indexed by fd. */
 FileEntry *file_table;
@@ -479,12 +432,20 @@ int file_write(fd, ptr_to_buf, len, access_code, handle, handle_data)
 	file_table[fd].write_q_tail = wq;
     }
 
-    if (file_table[fd].write_daemon == NOT_PRESENT) {
-	/* got to start write routine for this fd */
-	comm_set_select_handler(fd, COMM_SELECT_WRITE, (PF) diskHandleWrite,
-	    (void *) &file_table[fd]);
-    }
+    if (file_table[fd].write_daemon == PRESENT)
+	return DISK_OK;
+    /* got to start write routine for this fd */
+#if USE_ASYNC_IO
+    return aioFileQueueWrite(fd,
+	file_aio_write_complete,
+	&file_table[fd]);
+#else
+    comm_set_select_handler(fd,
+	COMM_SELECT_WRITE,
+	(PF) diskHandleWrite,
+        (void *) &file_table[fd]);
     return DISK_OK;
+#endif
 }
 
 
@@ -571,12 +532,15 @@ int file_read(fd, buf, req_len, offset, handler, client_data)
     ctrl_dat->handler = handler;
     ctrl_dat->client_data = client_data;
 
+#if USE_ASYNC_IO
+    return aioFileQueueRead(fd, file_aio_read_complete, ctrl_dat);
+#else
     comm_set_select_handler(fd,
 	COMM_SELECT_READ,
 	(PF) diskHandleRead,
 	(void *) ctrl_dat);
-
     return DISK_OK;
+#endif
 }
 
 
